<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3" >

    <TextView
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="Aplikasi Data Pribadi"
        />


    <TextView
        android:id="@+id/nameText"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/nama" />

    <TextView
        android:id="@+id/namaValue"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/umurText"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text="@string/umur" />

    <TextView
        android:id="@+id/umurValue"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/jeniskelaminText"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="4"
        android:text="@string/jeniskelamin" />

    <TextView
        android:id="@+id/jeniskelaminValue"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="64dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4" />
</GridLayout>
